--- a/BlogApplication/appsettings.json
+++ b/BlogApplication/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=BlogDB;Trusted_Connection=True;TrustServerCertificate=Yes;Encrypt=False;MultipleActiveResultSets=true;"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS02;Database=BlogDB;Trusted_Connection=True;TrustServerCertificate=Yes;Encrypt=False;MultipleActiveResultSets=true;"
   },
   "Logging": {
     "LogLevel": {
